src/test/resources/Parser/SyntaxErrors/FieldNotFound.front
class A:
    void test () {
        this.b;
    }